
[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations#01 - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        },
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "UNKNOWN"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:nuget/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:nuget/mine1@1.3.5"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_and_groups,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package,_no_licenses - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package_and_an_unknown_license - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "UNKNOWN"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        },
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/one_source_with_one_package_and_one_license_violation_(dev) - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_called_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/one_source_with_one_package,_one_called_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_grouped_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:composer/author3/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:nuget/mine2@3.2.5"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities,_but_some_uncalled - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:composer/author3/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:nuget/mine2@3.2.5"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_one_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability_(dev) - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.10.2-rc",
      "type": "library",
      "name": "mine3",
      "version": "0.10.2-rc",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.10.2-rc"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [],
      "detail": "This vulnerability allows for some very scary stuff to happen - seriously, you'd not believe it!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [],
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithVulnerabilities/two_sources_with_the_same_vulnerable_package - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations#01 - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        },
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "UNKNOWN"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:nuget/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:nuget/mine1@1.3.5"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_and_groups,_some_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package,_no_licenses - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package_and_an_unknown_license - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "UNKNOWN"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        },
        {
          "license": {
            "id": "Apache-2.0"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/one_source_with_one_package_and_one_license_violation_(dev) - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_called_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_called_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [
        {
          "license": {
            "id": "ISC"
          }
        }
      ],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [
        {
          "license": {
            "id": "MIT"
          }
        }
      ],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_grouped_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.3.5"
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:npm/mine2@3.2.5"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.4.1"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:composer/author3/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:nuget/mine2@3.2.5"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities,_but_some_uncalled - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:composer/author1/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "licenses": [],
      "purl": "pkg:composer/author3/mine3@0.4.1"
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.2"
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "licenses": [],
      "purl": "pkg:nuget/mine2@3.2.5"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-3",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-5",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": []
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability_(dev) - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine3@0.10.2-rc",
      "type": "library",
      "name": "mine3",
      "version": "0.10.2-rc",
      "licenses": [],
      "purl": "pkg:npm/mine3@0.10.2-rc"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [],
      "detail": "This vulnerability allows for some very scary stuff to happen - seriously, you'd not believe it!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    },
    {
      "id": "OSV-2",
      "references": [],
      "ratings": [],
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "licenses": [],
      "purl": "pkg:npm/mine2@5.9.0"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/two_sources_with_the_same_vulnerable_package - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "licenses": [],
      "purl": "pkg:npm/mine1@1.2.3"
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "references": [],
      "ratings": [
        {
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "advisories": [],
      "credits": {
        "organizations": []
      },
      "affects": []
    }
  ]
}

---
